GP vertex groups get messed up, when deleting a group #60677

Closed
opened 2019-01-20 19:57:18 +01:00 by heini · 3 comments

Operating system: Win 10 64bit
Graphics card: Geforce 940M

Broken:
2.80, b0dee09a6d win64, blender2.8

Short description of error
when deleting one of multiple Vertex groups for a GP object, the remaining groups change in regards to which points are assigned to them

Exact steps for others to reproduce the error

  • create a GP stroke with multiple VGs
  • delete a group
  • remaining groups seem to have swapped indices, with one being empty
  • if a new group is added afterwards, it won't be empty. instead it will contain previously assigned points

starting at 00:10
weightpaint_crash0001-1782.mp4

Operating system: Win 10 64bit Graphics card: Geforce 940M Broken: 2.80, b0dee09a6d55 win64, blender2.8 **Short description of error** when deleting one of multiple Vertex groups for a GP object, the remaining groups change in regards to which points are assigned to them **Exact steps for others to reproduce the error** - create a GP stroke with multiple VGs - delete a group - remaining groups seem to have swapped indices, with one being empty - if a new group is added afterwards, it won't be empty. instead it will contain previously assigned points starting at 00:10 [weightpaint_crash0001-1782.mp4](https://archive.blender.org/developer/F6347363/weightpaint_crash0001-1782.mp4)
Author

Added subscriber: @heini

Added subscriber: @heini
Antonio Vazquez self-assigned this 2019-01-20 20:28:43 +01:00

This issue was referenced by 6e443b3210

This issue was referenced by 6e443b32103505221fef86d2dcd5f4b8e6df550a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60677
No description provided.