Fix T60677: GP vertex groups get messed up, when deleting a group